fixed offset on mobile

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,13 @@ h1 {
     display: block;
     max-width: 100%;
     height: auto;
+    touch-action: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .controls {
